--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 	<body> 
 
-				
+
 	<h1>Go crazy</h1>
 
 	<ul>
@@ -29,11 +29,40 @@
 				<span class="answer">Different transitions</span> 
 				On item / hover</span>
 		</li>
+		<li>		
+			<div class="delay"></div>
+			<span class="xplain">
+				<span class="answer">1 sec delay;</span> 
+				Delay</span>
+		</li>
+		<li>		
+			<div class="multible"></div>
+			<span class="xplain">
+				<span class="answer">Width, left, opacity</span> 
+				Multible transitions</span>
+		</li>
 		<li>
 			<div class="bezier"></div>
 			<span class="xplain">Bezier</span>
 		</li>
 	</ul>
+
+
+	<h2>Max-height / height</h2>
+	height: not height 100%, <br>
+	max-height: works, but depending on the size the animation goes slower or faster <br>
+	ex: http://jsfiddle.net/LGDWP/9/
+
+	<div class="max-height">
+		hover <br>
+		<div class="menu">adssad <br>adssad <br>adssad <br>adssad <br>adssad <br>adssad</div>
+	</div>
+
+	<h2>animation:</h2>
+		no-animation: set timeout <br>
+		set class on hover, and other class on hover off
+
+	
 	
 
 
